# gdalwrap

./: .gitignore  .robotpkg.sh  .travis.bash  .travis.yml  CMakeLists.txt  README.md
include/gdalwrap/: gdal.hpp
src/: CMakeLists.txt  gdal.cpp  merge.cpp
test/: CMakeLists.txt  export8u.cpp  io_test.cpp  type_test.cpp
tools/: CMakeLists.txt  export8u.cpp  fastmerge.cpp
